kubernetes/fhir-services/002_postgres-db-datamesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir-db
  namespace: datamesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir-db
  template:
    metadata:
      labels:
        app: fhir-db
    spec:
      containers:
        - name: fhir-db
          image: postgres:latest
          ports:
            - containerPort: 5432
