kubernetes/fhir-services/003_postgres-svc-datamesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhir-db
  namespace: datamesh
spec:
  selector:
    app: fhir-db
  ports:
    - protocol: TCP
      port: 5432 
      targetPort: 5432
  type: ClusterIP
