kubernetes/fhir-services/006_postgres-svc-datamesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: datamesh
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432 
      targetPort: 5432
  type: ClusterIP
